--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+        <!-- SEO Meta Tags -->
+    <title>SpeakAI - AI-Powered Voice Assistant & Chatbot</title>
+    <meta name="description" content="SpeakAI is an advanced AI-powered voice assistant and chatbot designed to enhance communication, productivity, and accessibility. Try it today!" />
+    <meta name="keywords" content="AI assistant, voice AI, chatbot, speech recognition, natural language processing, AI-powered chatbot" />
+    <meta name="author" content="SpeakAI Team" />
+    <meta name="robots" content="index, follow" /> <!-- Allow search engines to index and follow links -->
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="SpeakAI - AI-Powered Voice Assistant & Chatbot" />
+    <meta property="og:description" content="Experience the power of AI with SpeakAI, an intelligent voice assistant and chatbot for seamless communication." />
+    <meta property="og:image" content="https://yourwebsite.com/images/speakai-preview.png" />
+    <meta property="og:url" content="https://yourwebsite.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card (For better sharing on Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SpeakAI - AI-Powered Voice Assistant & Chatbot" />
+    <meta name="twitter:description" content="Enhance your communication with SpeakAI, an AI-powered chatbot and voice assistant." />
+    <meta name="twitter:image" content="https://yourwebsite.com/images/speakai-preview.png" />
+    <meta name="twitter:site" content="@YourTwitterHandle" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Canonical URL (Prevents duplicate content issues) -->
+    <link rel="canonical" href="https://yourwebsite.com/" />
+
+    <!-- Additional Meta for Performance -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
   </head>
   <body>
     <div id="root"></div>
